--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -144,6 +144,7 @@
 .carousel-container {
   display: flex;
   justify-content: center;
+  overflow-x: hidden;
 
   .item-container {
     margin-right: 50px;
